LAYOUT:: Added fontrun navbar

--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -11,6 +11,7 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/vendor/assets/font
 @import "base/fonts";
 @import "base/layout";
 
+@import "app/fontrun";
 @import "app/colorTest";
 // Styles
 
