--- a/app/sass/base/_layout.scss
+++ b/app/sass/base/_layout.scss
@@ -1,3 +1,5 @@
+.site-wrapper {
+
 h1 {
 	font-family: 'mainFont';
 	font-size: 37px;
@@ -306,4 +308,5 @@ footer {
 	.copyRight {
 		text-align: right;
 	}
+}
 }
