project refactor. Added angular to project

--- a/app/styles/app/_side-menu.scss
+++ b/app/styles/app/_side-menu.scss
@@ -1,56 +1,6 @@
-$fr-main: #db43bd;
-$fr-secondary: #332532;
-
-// ### Fonts ###
-
-@font-face {
-  font-family: 'aileron';
-  src: url(../fonts/Aileron-Regular.otf);
-  font-weight: 400;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'aileron';
-  src: url(../fonts/Aileron-Light.otf);
-  font-weight: 300;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'aileron';
-  src: url(../fonts/Aileron-Bold.otf);
-  font-weight: 700;
-  font-style: normal;
-}
-
-h1, h2, h3, h4, h5 {
-	margin-top: 0;
-	font-family: 'aileron', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-	color: inherit;
-}
-
-#fr-menu {
+#fr-side-menu {
 	font-size: 12px;
 	color: #FFF;
-	h1 {
-		font-size: 2.2em;
-	}
-	h2 {
-		font-size: 1.9em;
-	}
-	h3 {
-		font-size: 1.5em;
-	}
-	h4 {
-		font-size: 1.3em;
-	}
-	p {
-		font-size: 1.1em;
-	}
-}
-
-#fr-menu {
 	position: fixed;
 	top: 0;
 	left: 0;
@@ -58,76 +8,135 @@ h1, h2, h3, h4, h5 {
 	min-height: 100vh;
 	background-color: $fr-secondary;
 	z-index: 100;
-	.fr-brand {
-		padding: 50px 20px 30px 20px;
+
+	h1 {
+		font-size: 2.2em;
 	}
-	ul  {
-		padding-left: 0;	
+
+	h2 {
+		font-size: 1.9em;
+	}
+
+	h3 {
+		font-size: 1.5em;
+	}
+
+	h4 {
+		font-size: 1.3em;
+	}
+
+	p {
+		font-size: 1.1em;
+	}
+
+	.side-menu__brand {
+		padding: 50px 20px 30px;
+	}
+
+	ul {
+		padding-left: 0;
+
 		li {
 			list-style: none;
 		}
-	} 
-}
+	}
 
-#fr-menu {
-	.fr-font-select {
-		h1.fr-titles {
+	.side-menu__font-select {
+		h1.side-menu__titles {
 			padding-left: 15px;
 			font-weight: 300;
 			text-transform: uppercase;
 		}
-		.fr-font-select-main h2 {
+
+		.side-menu__font-select-main h2 {
 			font-family: 'mainFont';
 		}
-		.fr-font-select-secondary h2 {
+
+		.side-menu__font-select-secondary h2 {
 			font-family: 'secondaryFont';
 		}
+
 		li {
 			padding: 15px;
 			background-color: darken($fr-secondary, 5%);
 			cursor: pointer;
 			transition: all 0.3s ease;
+
 			&:hover {
 				color: $fr-main;
 			}
+
 			&:first-child {
 				border-bottom: 2px solid $fr-secondary;
 			}
+
 			h2 {
 				margin-bottom: 0;
 			}
+
 			h4 {
 				margin-bottom: 3px;
 			}
 		}
 	}
-}
 
-#fr-menu {
-	.fr-color-select {
-		h1.fr-titles {
-			padding-left: 15px;
-			font-weight: 300;
-			text-transform: uppercase;
+	h1.side-menu__title {
+		padding-left: 15px;
+		font-weight: 300;
+		text-transform: uppercase;
+	}
+
+	.side-menu__selected-colors {
+		li {
+			display: flex;
+			flex-direction: row;
+			height: 35px;
+
+			& + li {
+				margin-top: 10px;
+			}
+
+			span {
+				flex-basis: 35px;
+			}
+
+			input[type='text'] {
+				flex-grow: 10;
+				margin-left: 15px;
+				padding: 0 15px;
+				font-size: 18px;
+				border: 1px solid #FFF;
+				border-radius: 3px;
+				background-color: transparent;
+			}
 		}
+	}
+
+	.side-menu__loaded-schemes {
+
 		ul {
 			padding-right: 15px;
 			padding-left: 15px;
 		}
+
 		li {
 			margin-bottom: 10px;
 			border: 1px solid lighten($fr-secondary, 30%);
 			border-radius: 5px;
 			cursor: pointer;
 		}
-		.fr-main-colors {
-			&:before, &:after {
+
+		.side-menu__main-colors {
+			&:after,
+			&:before {
 				display: table;
 				content: "";
 			}
+
 			&:after {
 				clear: both;
 			}
+
 			div {
 				@include clearfix();
 				float: left;
@@ -135,14 +144,18 @@ h1, h2, h3, h4, h5 {
 				height: 30px;
 			}
 		}
-		.fr-gray-colors {
-			&:before, &:after {
+
+		.side-menu__gray-colors {
+			&:after,
+			&:before {
 				display: table;
 				content: "";
 			}
+
 			&:after {
 				clear: both;
 			}
+
 			div {
 				@include clearfix();
 				float: left;
