--- a/app/styles/themes/theme-cupcake-flat.scss
+++ b/app/styles/themes/theme-cupcake-flat.scss
@@ -1,3 +1,6 @@
+@import "compass";
+@import "../variables/colorPalette";
+
 body {
 	background-color: #FFF;
 }
@@ -11,7 +14,6 @@ h2 {
 	font-size: 32px;
 	font-weight: 700;
 	color: darken($fillColor,35%);
-	text-shadow: 0 1px 0 rgba(#FFF, 0.5), 0 -1px 0 rgba($darkGray, 0.7);
 }
 
 // Layout
@@ -19,8 +21,7 @@ h2 {
 .titleWrapper {
 	padding-top: 36px;
 	padding-bottom: 16px;
-	background: linear-gradient(lighten($fillColor,10%) 1%, $fillColor 5%, darken($fillColor,20%));
-	box-shadow: 0 3px 3px $darkGray;
+	background: $fillColor;
 }
 
 .section {
@@ -35,11 +36,11 @@ button {
 	font-family: 'secondaryFont';
 	font-size: 15px;
 	color: #FFF;
-	background: linear-gradient(lighten($secondaryColor,20%) 1%, $secondaryColor 5%, darken($secondaryColor,10%));
+	background: $secondaryColor;
 	border: none;
 	border-radius: 5px;
 	&:hover {
-		background: linear-gradient(darken($secondaryColor,20%) 3%, $secondaryColor 50%, lighten($secondaryColor,10%) );
+		background: lighten($secondaryColor,10%);
 	}
 }
 
@@ -50,13 +51,12 @@ button {
 	background-color: $fillColor;
 	.vsBig1, .vsBig2 {
 		font-weight: 700;
-		text-shadow: 0 2px 1px #FFF, 0 -2px 1px $darkGray;
 	}
 	.vsBig1 {
-		color: rgba($mainColor, 0.8);
+		color: $mainColor;
 	}
 	.vsBig2 {
-		color: rgba($secondaryColor, 0.8);
+		color: $secondaryColor;
 	}
 	.vsTagInner {
 		display: inline-block;
@@ -64,10 +64,8 @@ button {
 		width: 50px;
 		height: 50px;
 		color: #FFF;
-		text-shadow: 0 2px 1px $darkGray;
 		background-color: rgba($darkGray, 0.3);
 		border-radius: 50%;
-		box-shadow: 0 2px 1px #FFF, 0 -2px 1px $darkGray;
 	}
 }
 
@@ -75,28 +73,20 @@ button {
 // Navbar
 
 #homeNav {
-	background: linear-gradient($fillColor, darken($fillColor,20%));
+	background: $fillColor;
 	.navbar-brand {
 		color: $darkGray;
 	}
 	li {
 		color: $darkGray;
-		border-left: 1px solid transparent;
-		border-right: 1px solid transparent;
 	}
 	li:hover {
 		color: #FFF;
-		text-shadow: 0 2px 1px $darkGray;
-		border-left: 1px solid rgba($darkGray, 0.3);
-		border-right: 1px solid rgba($darkGray, 0.3);
-		background: linear-gradient(darken($fillColor,40%) 5%,darken($fillColor,30%) 25% , darken($fillColor,25%) 75% ,darken($fillColor,20%) 95%) !important;
+		background: darken($fillColor,30%);
 	}
 	li.activeNav {
 		color: #FFF;
-		text-shadow: 0 2px 1px $darkGray;
-		border-left: 1px solid rgba($darkGray, 0.3);
-		border-right: 1px solid rgba($darkGray, 0.3);
-		background: linear-gradient(darken($fillColor,40%) 5%,darken($fillColor,30%) 25% , darken($fillColor,25%) 75% ,darken($fillColor,20%) 95%) !important;
+		background: darken($fillColor,30%);
 	}
 }
 
