--- a/app/styles/themes/theme-future.scss
+++ b/app/styles/themes/theme-future.scss
@@ -1,3 +1,7 @@
+@import "compass";
+@import "../variables/colorPalette";
+@import "../variables/mixins";
+
 body {
 	background-color: $contrastColorLight;
 }
