--- a/app/styles/base/_layout.scss
+++ b/app/styles/base/_layout.scss
@@ -1,3 +1,7 @@
+ul {
+	padding-left: 0;
+}
+
 .site-wrapper {
 
 h1 {
@@ -254,7 +258,7 @@ a {
 	.socialIcons {
 		.social {
 			float: left;
-			margin-right: 10px; 
+			margin-right: 10px;
 			font-family: 'FontAwesome';
 			font-size: 20px;
 		}
