--- a/app/styles/themes/theme-agnostic.scss
+++ b/app/styles/themes/theme-agnostic.scss
@@ -1,3 +1,7 @@
+@import "compass";
+@import "../variables/colorPalette";
+@import "../variables/mixins";
+
 body {
 	background-color: #FFF;
 }
@@ -44,7 +48,7 @@ p {
 #fontsVersus {
 	text-transform: uppercase;
 	.vsTag {
-		margin-bottom: 20px;		
+		margin-bottom: 20px;
 	}
 	.vsTagInner {
 		padding: 5px 15px;
@@ -203,7 +207,7 @@ button {
 	border-bottom: 5px solid $mainColor;
 	.container .wrapper{
 		overflow: hidden;
-		padding: 15px;	
+		padding: 15px;
 		border-radius: 7px;
 	}
 	.aboutUsTag {
@@ -233,7 +237,7 @@ button {
 	h6 {
 		z-index: 10;
 		margin-bottom: 2px;
-		font-family: 'mainFont';		
+		font-family: 'mainFont';
 		font-weight: 700;
 		color: $mainColor;
 	}
@@ -261,7 +265,7 @@ button {
 		font-weight: 300;
 		color: $fillColor;
 		text-transform: uppercase;
-	}	
+	}
 	.priceTag {
 		margin-bottom: 15px;
 		font-family: 'mainFont';
