--- a/app/styles/themes/theme-blizzard.scss
+++ b/app/styles/themes/theme-blizzard.scss
@@ -1,3 +1,7 @@
+@import "compass";
+@import "../variables/colorPalette";
+@import "../variables/mixins";
+
 // Mixins
 
 $borderColor: rgba( 255, 255, 255, 0.2);
@@ -74,7 +78,7 @@ h2 {
 		background-color: rgba(0,0,0,0.2);
 	}
 	.vsTag {
-		margin-bottom: 20px;		
+		margin-bottom: 20px;
 	}
 	.vsTagInner {
 		color: #FFF;
@@ -268,7 +272,7 @@ button {
 	}
 	h6 {
 		margin-bottom: 2px;
-		font-family: 'mainFont';		
+		font-family: 'mainFont';
 		font-weight: 300;
 		color: $secondaryColor;
 	}
@@ -283,7 +287,7 @@ button {
 	}
 	h4 {
 		color: $mainColor;
-	}	
+	}
 	.priceTag {
 		margin-bottom: 15px;
 		font-family: 'mainFont';
